# sortifile

./: .gitignore  README.md  config_loader.py  main.py  pyproject.toml  sorter.py  undo.py
rules/: default_rules.json
sortifile/: config_loader.py  main.py  undo.py
