[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sortifile"
version = "1.1.2"
description = "CLI tool for automatically sorting files into subfolders. Customisable with own rules with function to restore the old structure"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "alphascg" }]

dependencies = [
  "importlib-resources; python_version < '3.9'"
]

[project.scripts]
sortifile = "sortifile.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sortifile", "sortifile.rules"]